--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/gerenciador-tarefas
 spring.datasource.username=postgres
 spring.datasource.password=root
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgresPlusDialect
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
+
